2003-08-11  Christian Stimming <stimming@tuhh.de>
	
	* configure.in: released version 0.4

2003-08-04  Christian Stimming <stimming@tuhh.de>

	* src/lib/ktoblzcheck.cc: Fix unparenthesed array initialization.

2003-08-03  Christian Stimming  <stimming@tuhh.de>

	* src/include/ktoblzcheck.h: Removed __gnu_cxx::hash_map since
	library headers that change depending on some define variable are
	no good -- imagine compiling the lib with this define active, but
	using it without. Then the program sees objects with a different
	ABI. Therefore removed that.

	* doc/ktoblzcheck.1, src/lib/ktoblzcheck.cc,
	src/lib/algorithms.{h,cc}: Many more algorithm implementation by
	Jens Gecius <jens@gecius.de>. According to him now all
	Bundesbank's algorithms are now implemented. Plus man page.

2003-06-16  Christian Stimming <stimming@tuhh.de>

	* src/include/ktoblzcheck.h, src/lib/ktoblzcheck.cc: It turned out
	that std::map from <map> is really equally fast as
	__gnu_cxx::hash_map. Therefore std::map is now used if
	<ext/hash_map> is not available.

2003-06-12  Christian Stimming <stimming@tuhh.de>

	* src/bin/benchmark.cc: Add forgotten include.

2003-06-11  Christian Stimming <stimming@tuhh.de>

	* configure.in: released version 0.3

	* README: Updated.

	* src/bankdata/bankdata.txt: Updated, now valid from 2003-06-09
	onwards.

2003-06-09  Christian Stimming  <stimming@tuhh.de>

	* src/bin/benchmark.cc: Added program to evaluate the different
	lookup methods.

	* acinclude.m4, configure.in: Added macros for checking for
	<ext/hash_map>

	* src/include/ktoblzcheck.h, src/lib/ktoblzcheck.cc: Implemented
	hash_map support if it is available.

	* ktoblzcheck.spec.in, Makefile.am: Add spec file and automated
	rules for rpm building.

2003-06-08  Christian Stimming  <stimming@tuhh.de>

	* src/lib/accnum.cc (AccountNumberCheck_new): Fix stoopid bug that
	prevented proper initialization.

	* configure.in: Released version 0.2
	