@@ -1,3 +1,4 @@
 Fabian Kaiser <fabian@openhbci.de>
 Christian Stimming <stimming@tuhh.de>
 Jens Gecius <jens@gecius.de>
+Daniel Gloeckner <daniel-gl@gmx.net>
